Made some changes

--- a/src/index.scss
+++ b/src/index.scss
@@ -101,7 +101,12 @@ input[type='number']::-webkit-outer-spin-button {
   }
 }
 
+.tooltip-header-wrapper{
+  color: $textColor;
+}
+
 .tooltip-description {
+  color: $textColor;
   padding-top: 5px;
 }
 
@@ -161,7 +166,8 @@ button:active {
     color: #fff;
     background-color: rgba(15, 15, 20, 0.7);
     letter-spacing: 0.02em;
-    width: 100px; // Increased from 80px
+    width: 60px; // Increased from 80px
+    border: 3px solid rgba(255, 255, 255, 0.04);
     &:focus-within {
       background-color: rgba(15, 15, 20, 0.9);
     }
